--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.9",
+    "@docusaurus/plugin-debug": "^2.0.0-beta.13",
     "@docusaurus/plugin-google-analytics": "^2.0.0-beta.13",
-    "@docusaurus/preset-classic": "2.0.0-beta.9",
+    "@docusaurus/theme-classic": "^2.0.0-beta.13",
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
     "clsx": "^1.1.1",
@@ -38,5 +38,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@docusaurus/core": "^2.0.0-beta.13",
+    "@docusaurus/plugin-content-blog": "^2.0.0-beta.13",
+    "@docusaurus/plugin-content-docs": "^2.0.0-beta.13",
+    "@docusaurus/plugin-content-pages": "^2.0.0-beta.13",
+    "@docusaurus/preset-classic": "^2.0.0-beta.13"
   }
 }
