--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/plugin-debug": "^2.0.0-beta.14",
-    "@docusaurus/plugin-google-analytics": "^2.0.0-beta.14",
-    "@docusaurus/theme-classic": "^2.0.0-beta.14",
+    "@docusaurus/plugin-debug": "^2.0.1",
+    "@docusaurus/plugin-google-analytics": "^2.0.1",
+    "@docusaurus/theme-classic": "^2.0.1",
+    "@easyops-cn/docusaurus-search-local": "^0.30.2",
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
     "clsx": "^1.1.1",
@@ -43,10 +44,10 @@
     ]
   },
   "devDependencies": {
-    "@docusaurus/core": "^2.0.0-beta.14",
-    "@docusaurus/plugin-content-blog": "^2.0.0-beta.14",
-    "@docusaurus/plugin-content-docs": "^2.0.0-beta.14",
-    "@docusaurus/plugin-content-pages": "^2.0.0-beta.14",
-    "@docusaurus/preset-classic": "^2.0.0-beta.14"
+    "@docusaurus/core": "^2.0.1",
+    "@docusaurus/plugin-content-blog": "^2.0.1",
+    "@docusaurus/plugin-content-docs": "^2.0.1",
+    "@docusaurus/plugin-content-pages": "^2.0.1",
+    "@docusaurus/preset-classic": "^2.0.1"
   }
 }
