--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/plugin-google-analytics": "^2.0.1",
     "@docusaurus/theme-classic": "^2.0.1",
     "@easyops-cn/docusaurus-search-local": "^0.30.2",
+    "@emeraldpay/hashicon-react": "^0.5.2",
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
     "clsx": "^1.1.1",
