--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/plugin-debug": "^2.4.0",
-    "@docusaurus/plugin-google-analytics": "^2.4.0",
-    "@docusaurus/theme-classic": "^2.4.0",
+    "@docusaurus/plugin-debug": "^3.0.1",
+    "@docusaurus/plugin-google-analytics": "^3.0.1",
+    "@docusaurus/theme-classic": "^3.0.1",
     "@easyops-cn/docusaurus-search-local": "^0.30.2",
     "@emeraldpay/hashicon-react": "^0.5.2",
     "@mdx-js/react": "^1.6.21",
@@ -25,11 +25,11 @@
     "file-loader": "^6.2.0",
     "hast-util-is-element": "^1.1.0",
     "prism-react-renderer": "^1.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-showdown": "^2.3.1",
-    "rehype-katex": "^5.0.0",
-    "remark-math": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rehype-katex": "^7.0.0",
+    "rehype-math": "^0.2.0",
+    "remark-math": "^6.0.0",
     "url-loader": "^4.1.1"
   },
   "browserslist": {
@@ -45,10 +45,10 @@
     ]
   },
   "devDependencies": {
-    "@docusaurus/core": "^2.4.0",
-    "@docusaurus/plugin-content-blog": "^2.4.0",
-    "@docusaurus/plugin-content-docs": "^2.4.0",
-    "@docusaurus/plugin-content-pages": "^2.4.0",
-    "@docusaurus/preset-classic": "^2.4.0"
+    "@docusaurus/core": "^3.0.1",
+    "@docusaurus/plugin-content-blog": "^3.0.1",
+    "@docusaurus/plugin-content-docs": "^3.0.1",
+    "@docusaurus/plugin-content-pages": "^3.0.1",
+    "@docusaurus/preset-classic": "^3.0.1"
   }
 }
