try this? Update to v3

--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@docusaurus/plugin-debug": "^3.0.1",
     "@docusaurus/plugin-google-analytics": "^3.0.1",
     "@docusaurus/theme-classic": "^3.0.1",
-    "@easyops-cn/docusaurus-search-local": "^0.30.2",
+    "@docusaurus/theme-common": "^3.0.1",
+    "@easyops-cn/docusaurus-search-local": "^0.38.1",
     "@emeraldpay/hashicon-react": "^0.5.2",
-    "@mdx-js/react": "^1.6.21",
+    "@mdx-js/react": "^3.0.0",
     "@svgr/webpack": "^5.5.0",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
