--- a/user-guide/01-getting-started/01-assembly_guides/06_pioreactor_20ml_v1.1_to_v1.5/_category_.yaml
+++ b/user-guide/01-getting-started/01-assembly_guides/06_pioreactor_20ml_v1.1_to_v1.5/_category_.yaml
@@ -1,4 +1,4 @@
 collapsed: true
 collapsible: true
-label: "Pioreactor 20ml v1.1 → v1.5"
+label: "Upgrade 20ml v1.1 → v1.5"
 className: sidebar-item--new
