--- a/user-guide/01-getting-started/01-assembly_guides/07_pioreactor_40ml_v1.0_to_v1.5/_category_.yaml
+++ b/user-guide/01-getting-started/01-assembly_guides/07_pioreactor_40ml_v1.0_to_v1.5/_category_.yaml
@@ -1,4 +1,4 @@
 collapsed: true
 collapsible: true
-label: "Pioreactor 40ml v1.0 → v1.5"
+label: "Upgrade 40ml v1.0 → v1.5"
 className: sidebar-item--new
