--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@docusaurus/plugin-google-analytics": "^3.0.1",
     "@docusaurus/theme-classic": "^3.0.1",
     "@docusaurus/theme-common": "^3.0.1",
+    "@docusaurus/theme-mermaid": "^3.0.1",
     "@easyops-cn/docusaurus-search-local": "^0.38.1",
     "@mdx-js/react": "^3.0.0",
     "@svgr/webpack": "^5.5.0",
+    "boring-avatars": "^1.11.2",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
     "hast-util-is-element": "^1.1.0",
@@ -30,8 +32,7 @@
     "rehype-katex": "^7.0.0",
     "rehype-math": "^0.2.0",
     "remark-math": "^6.0.0",
-    "url-loader": "^4.1.1",
-    "boring-avatars": "^1.11.2"
+    "url-loader": "^4.1.1"
   },
   "browserslist": {
     "production": [
